Fixed service detail view
Added service packages templates

--- a/templates/services/service_detail.html
+++ b/templates/services/service_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 {% load static %}
 
 {% block title %}{{ title }}{% endblock %}
@@ -114,13 +114,14 @@
                             <div class="detail-content">
                                 <h5>Compatible Vehicles</h5>
                                 <div class="vehicle-types">
-                                    {% for vehicle_type in service.compatible_vehicle_types|split:"," %}
-                                        <span class="vehicle-badge">{{ vehicle_type|title }}</span>
+                                    {% for vehicle_type in compatible_vehicle_types %}
+                                        <span class="vehicle-badge">{{ vehicle_type }}</span>
+                                    {% empty %}
+                                        <span class="text-muted">All vehicle types</span>
                                     {% endfor %}
                                 </div>
                             </div>
                         </div>
-                        
                         {% if service.requires_booking %}
                         <div class="detail-card">
                             <div class="detail-icon">
