--- a/templates/includes/sidebar/modules/suppliers.html
+++ b/templates/includes/sidebar/modules/suppliers.html
@@ -36,7 +36,7 @@
         
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'purchase_orders' %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/suppliers/purchase-orders/">
+               href="/business/{{ request.tenant.slug }}/suppliers/orders/">
                 <i class="nav-icon fas fa-shopping-cart"></i>
                 <span class="nav-text">All Orders</span>
             </a>
@@ -44,19 +44,13 @@
         
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'create_purchase_order' %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/suppliers/purchase-orders/create/">
+               href="/business/{{ request.tenant.slug }}/suppliers/orders/create/">
                 <i class="nav-icon fas fa-plus"></i>
                 <span class="nav-text">Create Order</span>
             </a>
         </li>
         
-        <li class="nav-item">
-            <a class="nav-link {% if request.resolver_match.url_name == 'pending_orders' %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/suppliers/purchase-orders/pending/">
-                <i class="nav-icon fas fa-clock"></i>
-                <span class="nav-text">Pending Orders</span>
-            </a>
-        </li>
+        
         
         <li class="nav-divider">
             <span class="nav-divider-text">Reports</span>
@@ -64,7 +58,7 @@
         
         <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.url_name == 'supplier_reports' %}active{% endif %}" 
-               href="/business/{{ request.tenant.slug }}/suppliers/reports/">
+               href="/business/{{ request.tenant.slug }}/suppliers/performance/">
                 <i class="nav-icon fas fa-chart-bar"></i>
                 <span class="nav-text">Supplier Reports</span>
             </a>
