Implemented the Expense System

--- a/templates/includes/sidebar/main.html
+++ b/templates/includes/sidebar/main.html
@@ -77,6 +77,9 @@
                 <!-- Inventory Module -->
                  {% include "includes/sidebar/modules/inventory.html" %}
 
+                <!-- Expenses Module -->
+                {% include "includes/sidebar/modules/expenses.html" %}
+
                 <!-- Payments Module -->
                 {% include "includes/sidebar/modules/payments.html" %}
                 
@@ -87,6 +90,8 @@
 
                 <!-- Reports Module -->
                 {% include "includes/sidebar/modules/reports.html" %}
+            </ul>
+        </div>
         {% endif %}
 
         <!-- Settings (Owner Only) -->
