--- a/templates/includes/topbar/quick_actions.html
+++ b/templates/includes/topbar/quick_actions.html
@@ -140,6 +140,30 @@
                     <div class="action-description">Update inventory levels</div>
                 </div>
             </a>
+            
+            <!-- New Expense -->
+            <a class="dropdown-item action-item" 
+               href="/business/{{ request.tenant.slug }}/expenses/create/">
+                <div class="action-icon bg-danger">
+                    <i class="fas fa-receipt"></i>
+                </div>
+                <div class="action-content">
+                    <div class="action-title">Record Expense</div>
+                    <div class="action-description">Add business expense</div>
+                </div>
+            </a>
+            
+            <!-- New Vendor -->
+            <a class="dropdown-item action-item" 
+               href="/business/{{ request.tenant.slug }}/expenses/vendors/create/">
+                <div class="action-icon bg-dark">
+                    <i class="fas fa-truck"></i>
+                </div>
+                <div class="action-content">
+                    <div class="action-title">New Vendor</div>
+                    <div class="action-description">Add supplier/vendor</div>
+                </div>
+            </a>
         </div>
         {% endif %}
         
