--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -92,7 +92,7 @@
                 <!-- Help Link -->
                 <div class="text-center mt-3">
                     <p class="text-white-75 small mb-0">
-                        Need help? <a href="{% url 'contact' %}" class="text-white">Contact Support</a>
+                        Need help? <a href="#" class="text-white">Contact Support</a>
                     </p>
                 </div>
             </div>
